use of Boolean.valueOf instead of creating Boolean instances use of Integer.valueOf instead of creating Integer instances