@@ -463,7 +463,7 @@ public class StudyEventDAO extends AuditableEntityDAO implements Listener {
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(ID));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ID));
 
         String sql = digester.getQuery("findByPK");
         ArrayList alist = this.selectByCache(sql, variables);
