@@ -327,16 +327,16 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
 
     public ArrayList findAllByStudyOrderByLabel(StudyBean sb) {
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(sb.getId()));
-        variables.put(new Integer(2), new Integer(sb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(sb.getId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(sb.getId()));
 
         return executeFindAllQuery("findAllByStudyOrderByLabel", variables);
     }
 
     public ArrayList findAllActiveByStudyOrderByLabel(StudyBean sb) {
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(sb.getId()));
-        variables.put(new Integer(2), new Integer(sb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(sb.getId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(sb.getId()));
 
         return executeFindAllQuery("findAllActiveByStudyOrderByLabel", variables);
     }
@@ -347,8 +347,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(currentStudy.getId()));
-        variables.put(new Integer(2), new Integer(currentStudy.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(currentStudy.getId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(currentStudy.getId()));
 
         String sql = digester.getQuery("findAllWithStudyEvent");
         ArrayList alist = this.select(sql, variables);
@@ -368,7 +368,7 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(subjectId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(subjectId));
 
         String sql = digester.getQuery("findAllBySubjectId");
         ArrayList alist = this.select(sql, variables);
@@ -387,9 +387,9 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), label);
-        variables.put(new Integer(2), new Integer(studyId));
-        variables.put(new Integer(3), new Integer(studySubjectId));
+        variables.put(Integer.valueOf(1), label);
+        variables.put(Integer.valueOf(2), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(3), Integer.valueOf(studySubjectId));
 
         String sql = digester.getQuery("findAnotherBySameLabel");
         ArrayList alist = this.select(sql, variables);
@@ -407,9 +407,9 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), label);
-        variables.put(new Integer(2), new Integer(studyId));
-        variables.put(new Integer(3), new Integer(studySubjectId));
+        variables.put(Integer.valueOf(1), label);
+        variables.put(Integer.valueOf(2), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(3), Integer.valueOf(studySubjectId));
 
         String sql = digester.getQuery("findAnotherBySameLabelInSites");
         ArrayList alist = this.select(sql, variables);
@@ -427,7 +427,7 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(ID));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ID));
 
         String sql = digester.getQuery("findByPK");
         ArrayList alist = this.select(sql, variables);
@@ -445,9 +445,9 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), label);
-        variables.put(new Integer(2), new Integer(study.getId()));
-        variables.put(new Integer(3), new Integer(study.getId()));
+        variables.put(Integer.valueOf(1), label);
+        variables.put(Integer.valueOf(2), Integer.valueOf(study.getId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(study.getId()));
 
         String sql = digester.getQuery("findByLabelAndStudy");
 
@@ -474,10 +474,10 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         this.setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), label);
-        variables.put(new Integer(2), new Integer(studyId));
-        variables.put(new Integer(3), new Integer(studyId));
-        variables.put(new Integer(4), new Integer(id));
+        variables.put(Integer.valueOf(1), label);
+        variables.put(Integer.valueOf(2), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(3), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(4), Integer.valueOf(id));
 
         String sql = digester.getQuery("findSameByLabelAndStudy");
 
@@ -506,28 +506,28 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         // VALUES (?,?,?,?,NOW(),?,?,?)
 
         int ind = 1;
-        variables.put(new Integer(ind), sb.getLabel());
+        variables.put(Integer.valueOf(ind), sb.getLabel());
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getSubjectId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getSubjectId()));
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getStudyId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStudyId()));
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getStatus().getId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStatus().getId()));
         ind++;
         // Date_created is now()
-        variables.put(new Integer(ind), new Integer(sb.getOwnerId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getOwnerId()));
         ind++;
-        // variables.put(new Integer(ind), new Integer(sb.getStudyGroupId()));
+        // variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStudyGroupId()));
         // ind++;
         if (sb.getEnrollmentDate() == null) {
-            nullVars.put(new Integer(ind), new Integer(Types.DATE));
-            variables.put(new Integer(ind), null);
+            nullVars.put(Integer.valueOf(ind), Integer.valueOf(Types.DATE));
+            variables.put(Integer.valueOf(ind), null);
             ind++;
         } else {
-            variables.put(new Integer(ind), sb.getEnrollmentDate());
+            variables.put(Integer.valueOf(ind), sb.getEnrollmentDate());
             ind++;
         }
-        variables.put(new Integer(ind), sb.getSecondaryLabel());
+        variables.put(Integer.valueOf(ind), sb.getSecondaryLabel());
         ind++;
 
         this.execute(digester.getQuery("create"), variables, nullVars);
@@ -555,41 +555,41 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         HashMap nullVars = new HashMap();
 
         int ind = 1;
-        variables.put(new Integer(ind), sb.getLabel());
+        variables.put(Integer.valueOf(ind), sb.getLabel());
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getSubjectId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getSubjectId()));
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getStudyId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStudyId()));
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getStatus().getId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStatus().getId()));
         ind++;
         // Date_created is now()
-        variables.put(new Integer(ind), new Integer(sb.getOwner().getId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getOwner().getId()));
         ind++;
 
         // if (withGroup) {
-        // variables.put(new Integer(ind), new Integer(sb.getStudyGroupId()));
+        // variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStudyGroupId()));
         // ind++;
         // } else {
-        // nullVars.put(new Integer(ind), new Integer(TypeNames.INT));
-        // variables.put(new Integer(ind), null);
+        // nullVars.put(Integer.valueOf(ind), Integer.valueOf(TypeNames.INT));
+        // variables.put(Integer.valueOf(ind), null);
         // ind++;
         // }
 
         Date enrollmentDate = sb.getEnrollmentDate();
         if (enrollmentDate == null) {
-            nullVars.put(new Integer(ind), new Integer(Types.DATE));
-            variables.put(new Integer(ind), null);
+            nullVars.put(Integer.valueOf(ind), Integer.valueOf(Types.DATE));
+            variables.put(Integer.valueOf(ind), null);
             ind++;
         } else {
-            variables.put(new Integer(ind), enrollmentDate);
+            variables.put(Integer.valueOf(ind), enrollmentDate);
             ind++;
         }
 
-        variables.put(new Integer(ind), sb.getSecondaryLabel());
+        variables.put(Integer.valueOf(ind), sb.getSecondaryLabel());
         ind++;
 
-        variables.put(new Integer(ind), getValidOid(sb));
+        variables.put(Integer.valueOf(ind), getValidOid(sb));
         ind++;
 
         this.executeWithPK(digester.getQuery("create"), variables, nullVars);
@@ -649,9 +649,9 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), oid);
-        variables.put(new Integer(2), new Integer(studyId));
-        variables.put(new Integer(3), new Integer(studyId));
+        variables.put(Integer.valueOf(1), oid);
+        variables.put(Integer.valueOf(2), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(3), Integer.valueOf(studyId));
         String sql = digester.getQuery("findByOidAndStudy");
 
         ArrayList rows = this.select(sql, variables);
@@ -670,7 +670,7 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), oid);
+        variables.put(Integer.valueOf(1), oid);
         String sql = digester.getQuery("findByOid");
 
         ArrayList rows = this.select(sql, variables);
@@ -689,8 +689,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
         String partialSql;
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getWithFilterAndSort");
         sql = sql + filter.execute("");
      // Order by Clause for the defect id 0005480 
@@ -728,7 +728,7 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
         String sql = digester.getQuery("getCountofStudySubjectsAtStudyOrSite");
 
         ArrayList rows = this.select(sql, variables);
@@ -747,8 +747,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountofStudySubjectsAtStudy");
 
         ArrayList rows = this.select(sql, variables);
@@ -767,8 +767,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountofStudySubjects");
 
         ArrayList rows = this.select(sql, variables);
@@ -787,9 +787,9 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
-        variables.put(new Integer(3), status.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
+        variables.put(Integer.valueOf(3), status.getId());
         String sql = digester.getQuery("getCountofStudySubjectsBasedOnStatus");
 
         ArrayList rows = this.select(sql, variables);
@@ -808,8 +808,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountWithFilterListDiscNotes");
         sql += filter.execute("");
 
@@ -830,8 +830,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getWithFilterAndSortListDiscNotes");
         sql = sql + filter.execute("");
 
@@ -858,8 +858,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountWithFilterListDiscNotes");
         sql += filter.execute("");
 
@@ -880,8 +880,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getWithFilterAndSortListDiscNotes");
         sql = sql + filter.execute("");
 
@@ -908,8 +908,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountWithFilter");
         sql += filter.execute("");
 
@@ -929,8 +929,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpectedFilter();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getWithFilterAndSortAuditLog");
         sql = sql + filter.execute("");
 
@@ -958,8 +958,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountWithFilterAuditLog");
         sql += filter.execute("");
 
@@ -980,8 +980,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getWithFilterAndSort");
         sql = sql + filter.execute("");
 
@@ -1008,8 +1008,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), currentStudy.getId());
-        variables.put(new Integer(2), currentStudy.getId());
+        variables.put(Integer.valueOf(1), currentStudy.getId());
+        variables.put(Integer.valueOf(2), currentStudy.getId());
         String sql = digester.getQuery("getCountWithFilter");
         sql += filter.execute("");
 
@@ -1042,31 +1042,31 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         // STATUS_ID=?, ENROLLMENT_DATE=?, DATE_UPDATED=?,
         // UPDATE_ID=?, SECONDARY_LABEL=? WHERE STUDY_SUBJECT_ID=?
         int ind = 1;
-        variables.put(new Integer(ind), sb.getLabel());
+        variables.put(Integer.valueOf(ind), sb.getLabel());
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getSubjectId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getSubjectId()));
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getStudyId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStudyId()));
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getStatus().getId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getStatus().getId()));
         ind++;
         Date enrollmentDate = sb.getEnrollmentDate();
         if (enrollmentDate == null) {
-            nullVars.put(new Integer(ind), new Integer(Types.DATE));
-            variables.put(new Integer(ind), null);
+            nullVars.put(Integer.valueOf(ind), Integer.valueOf(Types.DATE));
+            variables.put(Integer.valueOf(ind), null);
             ind++;
         } else {
-            variables.put(new Integer(ind), enrollmentDate);
+            variables.put(Integer.valueOf(ind), enrollmentDate);
             ind++;
         }
       // date_updated is set to now()
-      //  variables.put(new Integer(ind), new java.util.Date());
+      //  variables.put(Integer.valueOf(ind), new java.util.Date());
       //  ind++;
-        variables.put(new Integer(ind), new Integer(sb.getUpdater().getId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getUpdater().getId()));
         ind++;
-        variables.put(new Integer(ind), sb.getSecondaryLabel());
+        variables.put(Integer.valueOf(ind), sb.getSecondaryLabel());
         ind++;
-        variables.put(new Integer(ind), new Integer(sb.getId()));
+        variables.put(Integer.valueOf(ind), Integer.valueOf(sb.getId()));
         ind++;
 
         String sql = digester.getQuery("update");
@@ -1097,9 +1097,9 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         setTypesExpected();
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(subjectId));
-        variables.put(new Integer(2), new Integer(study.getId()));
-        variables.put(new Integer(3), new Integer(study.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(subjectId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(study.getId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(study.getId()));
 
         String sql = digester.getQuery("findBySubjectIdAndStudy");
 
@@ -1155,8 +1155,8 @@ public class StudySubjectDAO<K extends String,V extends ArrayList> extends Audit
         ind++; // studyName
 
         HashMap variables = new HashMap();
-        variables.put(new Integer(1), new Integer(studyId));
-        variables.put(new Integer(2), new Integer(studyId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(studyId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(studyId));
 
         String sql = null;
         if (isLimited) {
