@@ -758,7 +758,7 @@ public class GenerateClinicalDataServiceImpl implements GenerateClinicalDataServ
 	
 		if(isCollectAudits()){
 		AuditLogEvent auditLog = new AuditLogEvent();
-		auditLog.setEntityId(new Integer(entityID));
+		auditLog.setEntityId(Integer.valueOf(entityID));
 		auditLog.setAuditTable(itemDataAuditTable);
 		auditLogsBean.setEntityID(entityValue);
 		ArrayList<AuditLogEvent> auditLogEvent = (getAuditEventDAO().findByParam(auditLog, anotherAuditLog));
@@ -920,7 +920,7 @@ public class GenerateClinicalDataServiceImpl implements GenerateClinicalDataServ
 		if(idx>0)
 			{
 			studyEventOID=  studyEventOID.substring(0,idx);
-			seOrdinal = new Integer(temp.substring(idx+1, temp.indexOf(CLOSE_ORDINAL_DELIMITER))).intValue();
+			seOrdinal = Integer.valueOf(temp.substring(idx+1, temp.indexOf(CLOSE_ORDINAL_DELIMITER))).intValue();
 			}
 		sed = getStudyEventDefDao().findByColumnName(studyEventOID, "oc_oid");
 		LOGGER.info("study event ordinal.."+seOrdinal);
