@@ -88,7 +88,7 @@ public class ListEventsForSubjectsServlet extends SecureController {
         if (idSetting.equals("auto editable") || idSetting.equals("auto non-editable")) {
             //Shaoyu Su
             //int nextLabel = getStudySubjectDAO().findTheGreatestLabel() + 1;
-            //request.setAttribute("label", new Integer(nextLabel).toString());
+            //request.setAttribute("label", Integer.valueOf(nextLabel).toString());
             request.setAttribute("label", resword.getString("id_generated_Save_Add"));
         }
 
