@@ -78,7 +78,7 @@ public class ViewEventDefinitionReadOnlyServlet extends ViewEventDefinitionServl
 
         request.setAttribute("definition", sed);
         request.setAttribute("eventDefinitionCRFs", eventDefinitionCRFs);
-        request.setAttribute("defSize", new Integer(eventDefinitionCRFs.size()));
+        request.setAttribute("defSize", Integer.valueOf(eventDefinitionCRFs.size()));
         // request.setAttribute("eventDefinitionCRFs", new
         // ArrayList(tm.values()));
         if (defId > 0) {
