@@ -259,7 +259,7 @@ public class ViewStudySubjectServlet extends SecureController {
                     Calendar cal = Calendar.getInstance();
                     cal.setTime(dob);
                     int year = cal.get(Calendar.YEAR);
-                    request.setAttribute("yearOfBirth", new Integer(year));
+                    request.setAttribute("yearOfBirth", Integer.valueOf(year));
                 } else {
                     request.setAttribute("yearOfBirth", "");
                 }
@@ -340,7 +340,7 @@ public class ViewStudySubjectServlet extends SecureController {
             }
             // YW >>
             HashMap args = new HashMap();
-            args.put("id", new Integer(studySubId).toString());
+            args.put("id", Integer.valueOf(studySubId).toString());
             table.setQuery("ViewStudySubject", args);
             table.setRows(allEventRows);
             table.computeDisplay();
@@ -370,12 +370,12 @@ public class ViewStudySubjectServlet extends SecureController {
                 String old = avb.getOldValue().trim();
                 try {
                     if (!StringUtil.isBlank(old)) {
-                        SubjectEventStatus oldStatus = SubjectEventStatus.get(new Integer(old).intValue());
+                        SubjectEventStatus oldStatus = SubjectEventStatus.get(Integer.valueOf(old).intValue());
                         sea.setOldSubjectEventStatus(oldStatus);
                     }
                     String newValue = avb.getNewValue().trim();
                     if (!StringUtil.isBlank(newValue)) {
-                        SubjectEventStatus newStatus = SubjectEventStatus.get(new Integer(newValue).intValue());
+                        SubjectEventStatus newStatus = SubjectEventStatus.get(Integer.valueOf(newValue).intValue());
                         sea.setNewSubjectEventStatus(newStatus);
                     }
                 } catch (NumberFormatException e) {
@@ -443,7 +443,7 @@ public class ViewStudySubjectServlet extends SecureController {
             int studyEventDefinitionId = sedao.getDefinitionIdFromStudyEventId(studyEventId);
 
             // EventDefinitionCRFBean edc = (EventDefinitionCRFBean)
-            // definitionsById.get(new Integer(
+            // definitionsById.get(Integer.valueOf(
             // studyEventDefinitionId));
             // fix problem of the above code(commented out), find the correct
             // edc, note that on definitionId can be related to multiple
@@ -522,8 +522,8 @@ public class ViewStudySubjectServlet extends SecureController {
 
         for (i = 0; i < eventDefinitionCRFs.size(); i++) {
             EventDefinitionCRFBean edcrf = (EventDefinitionCRFBean) eventDefinitionCRFs.get(i);
-            completed.put(new Integer(edcrf.getCrfId()), Boolean.FALSE);
-            startedButIncompleted.put(new Integer(edcrf.getCrfId()), new EventCRFBean());
+            completed.put(Integer.valueOf(edcrf.getCrfId()), Boolean.FALSE);
+            startedButIncompleted.put(Integer.valueOf(edcrf.getCrfId()), new EventCRFBean());
         }
 
         CRFVersionDAO cvdao = new CRFVersionDAO(ds);
@@ -534,10 +534,10 @@ public class ViewStudySubjectServlet extends SecureController {
             int crfId = cvdao.getCRFIdFromCRFVersionId(ecrf.getCRFVersionId());
             ArrayList idata = iddao.findAllByEventCRFId(ecrf.getId());
             if (!idata.isEmpty()) {// this crf has data already
-                completed.put(new Integer(crfId), Boolean.TRUE);
+                completed.put(Integer.valueOf(crfId), Boolean.TRUE);
             } else {// event crf got created, but no data entered
                // System.out.println("added one into startedButIncompleted" + ecrf.getId());
-                startedButIncompleted.put(new Integer(crfId), ecrf);
+                startedButIncompleted.put(Integer.valueOf(crfId), ecrf);
             }
         }
 
@@ -556,8 +556,8 @@ public class ViewStudySubjectServlet extends SecureController {
             if (status.equals(SubjectEventStatus.LOCKED)) {
                 dedc.setStatus(Status.LOCKED);
             }
-            Boolean b = (Boolean) completed.get(new Integer(edcrf.getCrfId()));
-            EventCRFBean ev = (EventCRFBean) startedButIncompleted.get(new Integer(edcrf.getCrfId()));
+            Boolean b = (Boolean) completed.get(Integer.valueOf(edcrf.getCrfId()));
+            EventCRFBean ev = (EventCRFBean) startedButIncompleted.get(Integer.valueOf(edcrf.getCrfId()));
             if (b == null || !b.booleanValue()) {
 
                 // System.out.println("entered boolean loop with ev
@@ -637,7 +637,7 @@ public class ViewStudySubjectServlet extends SecureController {
      * eventCRF.setCrf(crf); eventCRF.setCrfVersion(cVersion);
      * evs.add(eventCRF);
      *
-     * if (crfIdMap.containsKey(new Integer(crf.getId()))) { crfIdMap.put(new
+     * if (crfIdMap.containsKey(Integer.valueOf(crf.getId()))) { crfIdMap.put(new
      * Integer(crf.getId()), Boolean.TRUE);//already has // entry for this //
      * crf } }//for
      *
