@@ -42,7 +42,7 @@ public class TechAdminServlet extends SecureController {
         // ArrayList users = (ArrayList) udao.findAllByLimit(true);
         // request.setAttribute("users", users);
         ArrayList allUsers = (ArrayList) udao.findAll();
-        // request.setAttribute("allUserNumber", new Integer(allUsers.size()));
+        // request.setAttribute("allUserNumber", Integer.valueOf(allUsers.size()));
 
         SubjectDAO subdao = new SubjectDAO(sm.getDataSource());
         // ArrayList subjects = (ArrayList) subdao.findAllByLimit(true);
@@ -55,7 +55,7 @@ public class TechAdminServlet extends SecureController {
         // ArrayList crfs = (ArrayList) cdao.findAllByLimit(true);
         // request.setAttribute("crfs", subjects);
         ArrayList allCrfs = (ArrayList) cdao.findAll();
-        // request.setAttribute("allCrfNumber", new Integer(allCrfs.size()));
+        // request.setAttribute("allCrfNumber", Integer.valueOf(allCrfs.size()));
 
         resetPanel();
 
@@ -63,16 +63,16 @@ public class TechAdminServlet extends SecureController {
         panel.setOrderedData(true);
         setToPanel(resword.getString("in_the_application"), "");
         if (allSubjects.size() > 0) {
-            setToPanel(resword.getString("subjects"), new Integer(allSubjects.size()).toString());
+            setToPanel(resword.getString("subjects"), Integer.valueOf(allSubjects.size()).toString());
         }
         if (allUsers.size() > 0) {
-            setToPanel(resword.getString("users"), new Integer(allUsers.size()).toString());
+            setToPanel(resword.getString("users"), Integer.valueOf(allUsers.size()).toString());
         }
         if (allStudies.size() > 0) {
-            setToPanel(resword.getString("studies"), new Integer(allStudies.size()).toString());
+            setToPanel(resword.getString("studies"), Integer.valueOf(allStudies.size()).toString());
         }
         if (allCrfs.size() > 0) {
-            setToPanel(resword.getString("CRFs"), new Integer(allCrfs.size()).toString());
+            setToPanel(resword.getString("CRFs"), Integer.valueOf(allCrfs.size()).toString());
         }
         forwardPage(Page.TECH_ADMIN_SYSTEM);
     }
