@@ -55,7 +55,7 @@ public class FormDiscrepancyNotes {
         if (notes != null) {
             notes.add(field);
         }
-        idNotes.put(new Integer(entityId), notes);
+        idNotes.put(Integer.valueOf(entityId), notes);
     }
 
     public boolean hasNote(String field) {
@@ -78,7 +78,7 @@ public class FormDiscrepancyNotes {
     }
 
     public void setNumExistingFieldNotes(String field, int num) {
-        numExistingFieldNotes.put(field, new Integer(num));
+        numExistingFieldNotes.put(field, Integer.valueOf(num));
     }
 
     public int getNumExistingFieldNotes(String field) {
