@@ -227,7 +227,7 @@ public class StudyInfoPanel {
                 DatasetBean dsb = (DatasetBean) session.getAttribute("newDataset");
                 int ev_count = dsb.getItemIds().size();
 
-                this.setData(resword.getString("items_selected"), new Integer(ev_count).toString());
+                this.setData(resword.getString("items_selected"), Integer.valueOf(ev_count).toString());
 
             } else if (page.equals(Page.CREATE_DATASET_4)) {
                 this.reset();
@@ -240,7 +240,7 @@ public class StudyInfoPanel {
                 this.removeData(resword.getString("ending_date"));
                 DatasetBean dsb = (DatasetBean) session.getAttribute("newDataset");
                 int ev_count = dsb.getItemIds().size();
-                this.setData(resword.getString("items_selected"), new Integer(ev_count).toString());
+                this.setData(resword.getString("items_selected"), Integer.valueOf(ev_count).toString());
 
                 if ("01/01/1900".equals(english_sdf.format(dsb.getDateStart()))) {
                     this.setData(resword.getString("beginning_date"), resword.getString("not_specified"));
@@ -272,7 +272,7 @@ public class StudyInfoPanel {
                 this.setData(resword.getString("dataset_name"), dsb.getName());
                 this.setData(resword.getString("dataset_description"), dsb.getDescription());
                 int ev_count = dsb.getItemIds().size();
-                this.setData(resword.getString("items_selected"), new Integer(ev_count).toString());
+                this.setData(resword.getString("items_selected"), Integer.valueOf(ev_count).toString());
 
                 if ("01/01/1900".equals(english_sdf.format(dsb.getDateStart()))) {
                     this.setData(resword.getString("beginning_date"), resword.getString("not_specified"));
@@ -295,7 +295,7 @@ public class StudyInfoPanel {
                 SectionBean secBean = (SectionBean) session.getAttribute("secBean");
                 this.setData(resword.getString("section_selected"), secBean.getName());
                 Collection metadatas = (Collection) request.getAttribute("metadatas");
-                this.setData(resword.getString("number_of_questions"), new Integer(metadatas.size()).toString());
+                this.setData(resword.getString("number_of_questions"), Integer.valueOf(metadatas.size()).toString());
             } else if (page.equals(Page.CREATE_FILTER_SCREEN_4)) {
 
             } else if (page.equals(Page.CREATE_FILTER_SCREEN_5)) {
