@@ -151,7 +151,7 @@ public class DataImportService {
             if (eventCRFStatus.equals(Status.AVAILABLE) || dataEntryStage.equals(DataEntryStage.INITIAL_DATA_ENTRY)
                     || dataEntryStage.equals(DataEntryStage.INITIAL_DATA_ENTRY_COMPLETE)
                     || dataEntryStage.equals(DataEntryStage.DOUBLE_DATA_ENTRY_COMPLETE) || dataEntryStage.equals(DataEntryStage.DOUBLE_DATA_ENTRY)) {
-                permittedEventCRFIds.add(new Integer(eventCRFBean.getId()));
+                permittedEventCRFIds.add(Integer.valueOf(eventCRFBean.getId()));
             } else {
             	errors.add(respage.getString("your_listed_crf_in_the_file") + " "+eventCRFBean.getEventName());
                 continue;
@@ -280,10 +280,10 @@ public class DataImportService {
                                 // displayItemBean);
                             }
                         }
-                        if (!eventCrfInts.contains(new Integer(eventCrfBean.getId()))) {
+                        if (!eventCrfInts.contains(Integer.valueOf(eventCrfBean.getId()))) {
                             crfBusinessLogicHelper.markCRFComplete(eventCrfBean, userBean);
                             //logger.debug("*** just updated event crf bean: " + eventCrfBean.getId());
-                            eventCrfInts.add(new Integer(eventCrfBean.getId()));
+                            eventCrfInts.add(Integer.valueOf(eventCrfBean.getId()));
                         }
                     }
                 }
